Fixed Link to site so it doesnt matter what the domain is.

--- a/links.html
+++ b/links.html
@@ -17,7 +17,7 @@
     </div>
     <div style="text-align: center; color:antiquewhite; background-color: darkslategrey;">
         <p style="padding-top: 5%;">  Website [under construction]</p>
-        <button onclick="window.location.href='https://silaswolfe.com'; "class="my-button";>SilasWolfe.com</button>
+        <button onclick="window.location.href='index.html'; "class="my-button";>grafik.SilasWolfe.art</button>
         <br>
         <p>Behance</p>
         <button onclick="window.location.href='https://behance.net/silaswolfe'; "class="my-button";>Click Here!</button>
