--- a/gallery-fineart.html
+++ b/gallery-fineart.html
@@ -38,6 +38,12 @@
                 <div class="flexbod">
                     <img src="img/fa-colorado4.jpg">
                 </div>
+                 <div class="flexbod">
+                    <img src="img/fa-goblin1.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-goblin2.jpg">
+                </div>
             </div>
             <div class="flexcol">
                 <div class="flexbod">
@@ -56,6 +62,9 @@
                 </div>
                 <div class="flexbod">
                     <img src="img/fa-meters.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-gorilla1.jpg">
                 </div>
             </div>
         </div>
