--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,10 @@
 <body>
     <div class="indented" style="padding-bottom: 80px;">
         <p style="max-width: 500px;">If you have any employment opportunities, commission requests, or questions please let me know!</p>
-        <form>
+        <form
+              action="https://formspree.io/f/xrbplvkn"
+              method="POST"
+                >
             <label for="name"><small>Name:</small></label><br>
             <input type="text" id="name" name="name"><br>
             <label for="email"><small>Email:</small></label><br>
