Update with new files

--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -30,7 +30,7 @@
         <div class="flexcont">
             <div class="flexcoll">
                 <div class="flexbod">
-                    <img src="svg/">
+                    <img src="svg/pv-tika.svg">
                 </div>
                 <div class="flexbod">
                     <img src="X">
@@ -41,10 +41,10 @@
             </div>
             <div class="flexcol">
                 <div class="flexbod">
-                    <img src="X">
+                    <img src="svg/pv-Bwb.svg">
                 </div>
                 <div class="flexbod">
-                    <img src="X">
+                    <img src="svg/pv-norsk.svg">
                 </div>
                 <div class="flexbod">
                     <img src="X">
@@ -52,7 +52,7 @@
             </div>
             <div class="flexcolr">
                 <div class="flexbod">
-                    <img src="X">
+                    <img src="svg/pv-upz.svg">
                 </div>
                 <div class="flexbod">
                     <img src="X">
