--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -26,6 +26,21 @@
     <div class="indented">
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
+    <div class="flexcont">
+        <h2>Ueno Sans</h2>
+        <img href="svg/pv-UenoSans.svg">
+        <button class="nolinebutton"><small>Download Unavailable</small></button>
+    </div>
+    <div class="flexcont">
+        <h2>Publicos</h2>
+        <img href="svg/pv-Publicos.svg">
+        <button class="nolinebutton"><small>Download Unavailable</small></button>
+    </div>
+    <div class="flexcont">
+        <h2>Velocita</h2>
+        <img href="svg/pv-Velocita.svg">
+        <button class="nolinebutton"><small>Download Unavailable</small></button>
+    </div>
 <footer>
     <div class="container">
         <div class="column">
