--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -27,18 +27,18 @@
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
     <div class="flexcont">
-        <h2>Ueno Sans</h2>
-        <img href="svg/pv-UenoSans.svg">
+        <h2>Ueno Sans</h2><br>
+        <img src="svg/pv-UenoSans.svg"><br>
         <button class="nolinebutton"><small>Download Unavailable</small></button>
     </div>
     <div class="flexcont">
-        <h2>Publicos</h2>
-        <img href="svg/pv-Publicos.svg">
+        <h2>Publicos</h2><br>
+        <img src="svg/pv-Publicos.svg"><br>
         <button class="nolinebutton"><small>Download Unavailable</small></button>
     </div>
     <div class="flexcont">
-        <h2>Velocita</h2>
-        <img href="svg/pv-Velocita.svg">
+        <h2>Velocita</h2><br>
+        <img src="svg/pv-Velocita.svg"><br>
         <button class="nolinebutton"><small>Download Unavailable</small></button>
     </div>
 <footer>
