--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -27,19 +27,43 @@
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
     <div class="flexcont">
-        <h2>Ueno Sans</h2><br>
-        <img src="svg/pv-UenoSans.svg"><br>
-        <button class="nolinebutton"><small>Download Unavailable</small></button>
+        <div class="flexbod">
+            <div>
+                <h2>Ueno Sans</h2>
+            </div>
+            <div>
+                <img src="svg/pv-UenoSans.svg">
+            </div>
+            <div>
+                <button class="nolinebutton"><small>Download Unavailable</small></button>
+            </div>
+        </div>
     </div>
     <div class="flexcont">
-        <h2>Publicos</h2><br>
-        <img src="svg/pv-Publicos.svg"><br>
-        <button class="nolinebutton"><small>Download Unavailable</small></button>
+        <div class="flexbod">
+            <div>
+                <h2>Publicos</h2>
+            </div>
+            <div>
+                <img src="svg/pv-Publicos.svg">
+            </div>
+            <div>
+                <button class="nolinebutton"><small>Download Unavailable</small></button>
+            </div>
+        </div>
     </div>
     <div class="flexcont">
-        <h2>Velocita</h2><br>
-        <img src="svg/pv-Velocita.svg"><br>
-        <button class="nolinebutton"><small>Download Unavailable</small></button>
+        <div class="flexbod">
+            <div>
+                <h2>Velocita</h2>
+            </div>
+            <div>
+                <img src="svg/pv-Velocita.svg">
+            </div>
+            <div>
+                <button class="nolinebutton"><small>Download Unavailable</small></button>
+            </div>
+        </div>
     </div>
 <footer>
     <div class="container">
