--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -27,7 +27,7 @@
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
     <div class="flexcont">
-        <div class="flexbod">
+        <div class="flexcolr">
             <div>
                 <h2>Ueno Sans</h2>
             </div>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="flexcont">
-        <div class="flexbod">
+        <div class="flexcolr">
             <div>
                 <h2>Publicos</h2>
             </div>
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div class="flexcont">
-        <div class="flexbod">
+        <div class="flexcolr">
             <div>
                 <h2>Velocita</h2>
             </div>
