Maybe this one will work (still fonts)

--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -26,13 +26,14 @@
     <div class="indented">
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
+    <div class="indented">
     <div class="flexcont">
         <div class="flexcolr">
             <div>
                 <h2>Ueno Sans</h2>
             </div>
             <div>
-                <img src="svg/pv-UenoSans.svg">
+                <img src="svg/pv-UenoSans.svg" style="width: fit-content;">
             </div>
             <div>
                 <button class="nolinebutton"><small>Download Unavailable</small></button>
@@ -45,7 +46,7 @@
                 <h2>Publicos</h2>
             </div>
             <div>
-                <img src="svg/pv-Publicos.svg">
+                <img src="svg/pv-Publicos.svg" style="width: fit-content;">
             </div>
             <div>
                 <button class="nolinebutton"><small>Download Unavailable</small></button>
@@ -58,12 +59,13 @@
                 <h2>Velocita</h2>
             </div>
             <div>
-                <img src="svg/pv-Velocita.svg">
+                <img src="svg/pv-Velocita.svg" style="width: fit-content;">
             </div>
             <div>
                 <button class="nolinebutton"><small>Download Unavailable</small></button>
             </div>
         </div>
+    </div>
     </div>
 <footer>
     <div class="container">
