TYPEFACES.html FINALLY WORKS

--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -27,45 +27,33 @@
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
     <div class="indented">
-    <div class="flexcont">
-        <div class="flexcolr">
-            <div>
-                <h2>Ueno Sans</h2>
-            </div>
-            <div>
-                <img src="svg/pv-UenoSans.svg" style="width: fit-content;">
-            </div>
-            <div>
-                <button class="nolinebutton"><small>Download Unavailable</small></button>
-            </div>
+        <div>
+            <h2>Ueno Sans</h2>
         </div>
-    </div>
-    <div class="flexcont">
-        <div class="flexcolr">
-            <div>
-                <h2>Publicos</h2>
-            </div>
-            <div>
-                <img src="svg/pv-Publicos.svg" style="width: fit-content;">
-            </div>
-            <div>
-                <button class="nolinebutton"><small>Download Unavailable</small></button>
-            </div>
+        <div>
+            <img src="svg/pv-UenoSans.svg" style="width: 900px;">
         </div>
-    </div>
-    <div class="flexcont">
-        <div class="flexcolr">
-            <div>
-                <h2>Velocita</h2>
-            </div>
-            <div>
-                <img src="svg/pv-Velocita.svg" style="width: fit-content;">
-            </div>
-            <div>
-                <button class="nolinebutton"><small>Download Unavailable</small></button>
-            </div>
+        <div>
+            <button class="nolinebutton"><small>Font not finished</small></button>
         </div>
-    </div>
+        <div>
+            <h2>Publicos</h2>
+        </div>
+        <div>
+            <img src="svg/pv-Publicos.svg" style="width: 900px;">
+        </div>
+        <div>
+            <button class="nolinebutton"><small>Font not finished</small></button>
+        </div>
+        <div>
+            <h2>Velocita</h2>
+        </div>
+        <div>
+            <img src="svg/pv-Velocita.svg" style="width: 900px;">
+        </div>
+        <div>
+            <button class="nolinebutton"><small>Download Unavailable</small></button>
+        </div>
     </div>
 <footer>
     <div class="container">
