Fixed the Branding Area

--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -30,35 +30,20 @@
         <div class="flexcont">
             <div class="flexcoll">
                 <div class="flexbod">
-                    <img src="svg/pv-tika.svg">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
+                    <img src="svg/pv-tika.svg" alt="tika">
                 </div>
             </div>
             <div class="flexcol">
                 <div class="flexbod">
-                    <img src="svg/pv-Bwb.svg">
+                    <img src="svg/pv-Bwb.svg" alt="Broadway Bomb">
                 </div>
                 <div class="flexbod">
-                    <img src="svg/pv-norsk.svg">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
+                    <img src="svg/pv-norsk.svg" alt="Norsk Fisker">
                 </div>
             </div>
             <div class="flexcolr">
                 <div class="flexbod">
-                    <img src="svg/pv-upz.svg">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
-                </div>
-                <div class="flexbod">
-                    <img src="X">
+                    <img src="svg/pv-upz.svg" alt="Ueno Park Zoo">
                 </div>
             </div>
         </div>
