--- a/gallery-fonts.html
+++ b/gallery-fonts.html
@@ -26,7 +26,7 @@
     <div class="indented">
         <p>Here are typefaces I have designed or am currently working on.</p>
     </div>
-    <div class="indented">
+    <div class="indented" style="padding-bottom: 40pt;">
         <div>
             <h2>Ueno Sans</h2>
         </div>
