--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -43,7 +43,7 @@
             </div>
             <div class="flexcolr">
                 <div class="flexbod">
-                    <img src="svg/pv-upz.svg" alt="Ueno Park Zoo">
+                    <img src="https://github.com/WhineGart/whinegart.github.io/blob/0b26c166b1d08d39fb743a33d6628affae4d3236/svg/pv-upz.svg" alt="Ueno Park Zoo">
                 </div>
             </div>
         </div>
