--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div class="flexcoll">
                 <div class="flexbod">
                     Silas Wolfe is an artist from the southeastern United States. He moved around throughout his childhood, which gave him a unique outlook on life. He was steeped in the traditional and the avant-garde schools of art and design, which both play important roles in his current work. Silas sees all forms of craft and creation as connected on a fundamental level. He believes good artists should be able to paint and design equally well, which is why he prefers the term Visual Composer.
-In college, Silas was trained in a liberal range of art disciplines and media. His work has been characterized by structure, clarity, and unconventionality. If there’s a mold, he will try to break it more often than not.
+In college, Silas was trained in a liberal range of art disciplines and media. His work has been characterized by structure, clarity, and unconventionality. The single common thread connecting his work is a push for unnecessary excellence in every project he is connected with.
                 </div>
                 <div class="flexbod">
                     <img src="img/me1.jpg">
@@ -39,7 +39,7 @@ In college, Silas was trained in a liberal range of art disciplines and media. H
                     <img src="img/me2.jpg">
                 </div>
                 <div class="flexbod">
-                    There is never weirdness for the sake of weirdness. Silas’ process is dominated by research. He lives by Massimo Vignelli’s emphasis on the semantics. For every project he seeks to discover details and requirements that will reign in a flood of possible creative solutions.
+                    "Diligence is key; and if you're unhappy with it, others will be too." There is never weirdness for the sake of weirdness. Silas’ process is dominated by research. He lives by Massimo Vignelli’s emphasis on the semantics. For every project he seeks to discover details and requirements that will reign in a flood of possible creative solutions.
                 </div>
                 <div class="flexbod">
                     <img src="img/me5.jpg">
