--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -30,20 +30,20 @@
         <div class="flexcont">
             <div class="flexcoll">
                 <div class="flexbod">
-                    <img src="svg/pv-tika.svg" alt="tika">
+                    <img src="svg/pv-tika.svg" alt="tika" href="spg-br-tika.html">
                 </div>
             </div>
             <div class="flexcol">
                 <div class="flexbod">
-                    <img src="svg/pv-Bwb.svg" alt="Broadway Bomb">
+                    <img src="svg/pv-Bwb.svg" alt="Broadway Bomb" href="spg-br-broadwaybomb.html">
                 </div>
                 <div class="flexbod">
-                    <img src="svg/pv-norsk.svg" alt="Norsk Fisker">
+                    <img src="svg/pv-norsk.svg" alt="Norsk Fisker" href="spg-br-norskfisker.html">
                 </div>
             </div>
             <div class="flexcolr">
                 <div class="flexbod">
-                    <img src="svg/pv-upz.svg" alt="Ueno Park Zoo">
+                    <img src="svg/pv-upz.svg" alt="Ueno Park Zoo" href="spg-br-uenozoo.html">
                 </div>
             </div>
         </div>
