--- a/spg-br-broadwaybomb.html
+++ b/spg-br-broadwaybomb.html
@@ -20,31 +20,20 @@
     </div>
     <div class="indented">
         <h1>Broadway Bomb</h1>
-        <br>
-        <small>Vernacular Branding Project</small>
+        <small style="padding-bottom: 10pt;">Vernacular Branding Project</small>
     </div>
 </head>
 <body>
-    <div>
-        <img src="img/br-bwb-01.jpg">
-    </div>
-    <div>
-        <img src="img/br-bwb-02.jpg">
-    </div>
-    <div>
-        <img src="img/br-bwb-03.jpg">
-    </div>
-    <div>
-        <img src="img/br-bwb-04.jpg">
-    </div>
-    <div>
-        <img src="img/br-bwb-05.jpg">
-    </div>
-    <div>
-        <img src="img/br-bwb-06.jpg">
-    </div>
-    <div>
-        <img src="img/br-bwb-07.jpg">
+    <div class="flexcont">
+        <div class="indented; flexcolfullwid">
+            <img src="img/br-bwb-01.jpg" style="max-width: 80vw;">
+            <img src="img/br-bwb-02.jpg" style="max-width: 80vw;">
+            <img src="img/br-bwb-03.jpg" style="max-width: 80vw;">
+            <img src="img/br-bwb-04.jpg" style="max-width: 80vw;">
+            <img src="img/br-bwb-05.jpg" style="max-width: 80vw;">
+            <img src="img/br-bwb-06.jpg" style="max-width: 80vw;">
+            <img src="img/br-bwb-07.jpg" style="max-width: 80vw;">
+        </div>
     </div>
 <footer>
     <div class="container">
