filling out branding individual pages

--- a/spg-br-broadwaybomb.html
+++ b/spg-br-broadwaybomb.html
@@ -18,14 +18,14 @@
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
-    <div class="indented">
+    <div class="indented" style="padding-bottom: 10pt;">
         <h1>Broadway Bomb</h1>
-        <small style="padding-bottom: 10pt;">Vernacular Branding Project</small>
+        <small>Vernacular Branding Project</small>
     </div>
 </head>
 <body>
     <div class="flexcont">
-        <div class="indented; flexcolfullwid">
+        <div class="indented; flexcolfullwid" style="font-size: 0; padding-bottom: 20pt;">
             <img src="img/br-bwb-01.jpg" style="max-width: 80vw;">
             <img src="img/br-bwb-02.jpg" style="max-width: 80vw;">
             <img src="img/br-bwb-03.jpg" style="max-width: 80vw;">
