Learned How to do a PDF embedded

--- a/spg-br-uenozoo.html
+++ b/spg-br-uenozoo.html
@@ -25,13 +25,15 @@
 </head>
 <body>
     <div class="flexcont">
+    <!-- Posters-->
         <div class="indented; flexcolfullwid">
-            <img src="img/br-upzposter11.jpg" style="max-width: 80vw;">
-            <img src="img/br-upzmockup2.jpg" style="max-width: 80vw;">
-            <img src="img/br-upzmockup4.jpg" style="max-width: 80vw;">
-            <img src="img/br-upzmockup5.jpg" style="max-width: 80vw;">
+            <img src="img/br-upzposter11.jpg" style="width: 80vw;">
+            <img src="img/br-upzmockup2.jpg" style="width: 80vw;">
+            <img src="img/br-upzmockup4.jpg" style="width: 80vw;">
+            <img src="img/br-upzmockup5.jpg" style="width: 80vw;">
         </div>
     </div>
+    <!-- Tickets-->
     <div class="flexcont">
         <div class="flexbod">
             <img src="img/br-UPZticketA.jpg">
@@ -40,12 +42,18 @@
             <img src="img/br-UPZticketB.jpg">
         </div>
     </div>
-    <div class="flexcont">
+    <!-- Park Guide Pdf Frame-->
+    <div class="flexcont"> 
         <div class="indented; flexcolfullwid">
-            <img src="img/br-upzmockup3.jpg" style="max-width: 80vw;">
-            <embed title="ueno brochure" src="img/br-upzmap.pdf" style="width: 80vw;">
+            <img src="img/br-upzmockup3.jpg" style="width: 80vw;">
+            <object title="ueno brochure" data="img/br-upz-map.pdf" style="width: 80vw; height: 100vh;">
+                <a href="img/br-upzmap.pdf">
+                    Ueno Park Guide PDF
+                </a>
+            </object>
         </div>
     </div>
+    <!-- Billboards-->
 <footer>
     <div class="container">
         <div class="column">
