--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ In college, Silas was trained in a liberal range of art disciplines and media. H
                     <img src="img/me2.jpg">
                 </div>
                 <div class="flexbod">
-                    "Diligence is key; and if you're unhappy with it, others will be too." There is never weirdness for the sake of weirdness. Silas’ process is dominated by research. He lives by Massimo Vignelli’s emphasis on the semantics. For every project he seeks to discover details and requirements that will reign in a flood of possible creative solutions.
+                    "Diligence is key; and if you're unhappy with it, others will be too." Silas’ process is dominated by research, and his analytical nature allows him to work consistently in virtually any style or medium. He strives to innovate and impress audiences with whatever style he works in. For every project he seeks to discover details and requirements that will reign in a flood of possible creative solutions.
                 </div>
                 <div class="flexbod">
                     <img src="img/me5.jpg">
