--- a/gallery-branding.html
+++ b/gallery-branding.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="indented">
-        <p>In the future you can click on any of these projects to get a detailed breakdown.</p>
+        <p>Click on any of these projects to get a detailed breakdown. (more on the way!)</p>
     </div>
     <div class="indented">
         <div class="flexcont">
