fixing ueno zoo issues

--- a/spg-br-uenozoo.html
+++ b/spg-br-uenozoo.html
@@ -27,19 +27,28 @@
     <div class="flexcont">
     <!-- Posters-->
         <div class="indented; flexcolfullwid">
-            <img src="img/br-upzposter11.jpg" style="width: 80vw;">
-            <img src="img/br-upzmockup2.jpg" style="width: 80vw;">
-            <img src="img/br-upzmockup4.jpg" style="width: 80vw;">
-            <img src="img/br-upzmockup5.jpg" style="width: 80vw;">
+            <img alt="posters" src="img/br-upzposter11.jpg" style="width: 80vw;">
+        </div>
+    </div>
+    <div class="flexcont">
+        <div class="flexcol" style="max-width: 50vw;">
+            <p>Ueno Zoo is a popular zoo in Japan. I was given the prompt to redesign the branding for the zoo, so I created logos, ad materials, exhibit materials, and much more than what is shown here! It was a fun challenge to research the design values of such a different culture from my own, in hopes of creating something the actual Japanese public would like.</p>
+        </div>
+    </div>
+    <div class="flexcont">
+        <div class="indented; flexcolfullwid">
+            <img alt="something" src="img/br-upzmockup2.jpg" style="width: 80vw;">
+            <img alt="ticket" src="img/br-upzmockup4.jpg" style="width: 80vw;">
+            <img alt="tickets" src="img/br-upzmockup5.jpg" style="width: 80vw;">
         </div>
     </div>
     <!-- Tickets-->
     <div class="flexcont">
         <div class="flexbod">
-            <img src="img/br-UPZticketA.jpg">
+            <img alt="day pass" src="img/br-UPZticketA.jpg">
         </div>
         <div class="flexbod">
-            <img src="img/br-UPZticketB.jpg">
+            <img alt="annual pass" src="img/br-UPZticketB.jpg">
         </div>
     </div>
     <!-- Park Guide Pdf Frame-->
