--- a/spg-br-uenozoo.html
+++ b/spg-br-uenozoo.html
@@ -27,7 +27,7 @@
     <div class="flexcont">
     <!-- Posters-->
         <div class="indented; flexcolfullwid">
-            <img alt="posters" src="img/br-upzposter11.jpg" style="width: 80vw;">
+            <img alt="billboard" src="img/br-upzposter11.jpg" style="width: 80vw;">
         </div>
     </div>
     <div class="flexcont">
@@ -37,7 +37,7 @@
     </div>
     <div class="flexcont">
         <div class="indented; flexcolfullwid">
-            <img alt="something" src="img/br-upzmockup2.jpg" style="width: 80vw;">
+            <img alt="posters" src="img/br-upzmockup2.jpg" style="width: 80vw;">
             <img alt="ticket" src="img/br-upzmockup4.jpg" style="width: 80vw;">
             <img alt="tickets" src="img/br-upzmockup5.jpg" style="width: 80vw;">
         </div>
@@ -48,7 +48,7 @@
             <img alt="day pass" src="img/br-UPZticketA.jpg">
         </div>
         <div class="flexbod">
-            <img alt="annual pass" src="img/br-UPZticketB.jpg">
+            <img alt="annual pass" src="img/br-upzticketB.jpg">
         </div>
     </div>
     <!-- Park Guide Pdf Frame-->
