--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="img/ph-hollywood.jpg" class="flexcont">
         <div class="flexcent" style="color: white; font-weight: 700; text-align: center;"><large>An Interactive Series of Galleries</large><p style="font-weight: 200;">scroll to be amazed</p></div>
     </div>
-        <div class="hscrolcont" style="padding: 10px;">
+        <div class="hscrolcont" style="padding: 10px; width: 100vw;">
         <div class="hscrolitem">
           <img src="img/fa-rick.jpg" alt="Image 1">
           <img src="img/314989081_137004312454564_1686678289414028147_n.jpg" alt="Image 2">
