Moving to a design emphasis

--- a/CurrentlyPutAway/gallery-fineart.html
+++ b/CurrentlyPutAway/gallery-fineart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tika</title>
+    <title>Wolfe-Fine Art</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -18,26 +18,55 @@
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
-    <div class="indented" style="padding-bottom: 10pt;">
-        <h1>Tika</h1>
-        <small>Product Branding Project</small>
+    <div class="indented">
+        <h1>Fine Arts</h1>
     </div>
 </head>
 <body>
-    <div class="flexcont">
-        <div class="indented; flexcolfullwid" style="padding-bottom: 20px; font-size: 0;">
-            <img src="img/br-tika01.jpg" style="width: 80vw;">
-            <img src="img/br-tika02.jpg" style="width: 80vw;">
-            <img src="img/br-tika03.jpg" style="width: 80vw;">
-            <img src="img/br-tika04.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika05.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika06.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika07.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika08.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika09.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika10.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika11.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika12.jpg" style="max-width: 80vw;">
+    <div class="indented">
+        <p>Please enjoy this gallery!</p>
+    </div>
+    <div class="indented">
+        <div class="flexcont">
+            <div class="flexcoll">
+                <div class="flexbod">
+                    <img src="img/fa-3friends.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-colorado3.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-colorado4.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-goblin1.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-goblin2.jpg">
+                </div>
+            </div>
+            <div class="flexcol">
+                <div class="flexbod">
+                    <img src="img/fa-roman1.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-jandg.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-roman2.jpg">
+                </div>
+            </div>
+            <div class="flexcolr">
+                <div class="flexbod">
+                    <img src="img/fa-slov.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-meters.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-gorilla1.jpg">
+                </div>
+            </div>
         </div>
     </div>
 <footer>
