--- a/CurrentlyPutAway/options-a.html
+++ b/CurrentlyPutAway/options-a.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tika</title>
+    <title>Silas Wolfe-Art</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -18,26 +18,15 @@
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
-    <div class="indented" style="padding-bottom: 10pt;">
-        <h1>Tika</h1>
-        <small>Product Branding Project</small>
+    <div class="indented">
+        <h1>Art Categories</h1>
     </div>
 </head>
 <body>
-    <div class="flexcont">
-        <div class="indented; flexcolfullwid" style="padding-bottom: 20px; font-size: 0;">
-            <img src="img/br-tika01.jpg" style="width: 80vw;">
-            <img src="img/br-tika02.jpg" style="width: 80vw;">
-            <img src="img/br-tika03.jpg" style="width: 80vw;">
-            <img src="img/br-tika04.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika05.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika06.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika07.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika08.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika09.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika10.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika11.jpg" style="max-width: 80vw;">
-            <img src="img/br-tika12.jpg" style="max-width: 80vw;">
+    <div class="indented">
+        <div style="height: 50vh;">
+            <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-fineart.html'">Fine Arts..</p>
+            <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-illustration.html'">Illustrative Work..</p>
         </div>
     </div>
 <footer>
