--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="indented" style="margin-top: 5px; padding-bottom: 20px;">
         <button onclick="window.location.href='options-d.html'" class="nolinebutton">Design</button>
-        <button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>
+        <!--<button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>-->
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
@@ -22,20 +22,26 @@
 <body>
     <div class="flexcont">
         <img src="img/ph-hollywood.jpg" class="flexcont">
-        <div class="flexcent" style="color: white; font-weight: 700; text-align: center;"><large>An Interactive Series of Galleries</large><p style="font-weight: 200;">scroll to be amazed</p></div>
-    </div>
-        <div class="hscrolcont" style="padding: 10px; width: 100vw;">
-        <div class="hscrolitem">
-          <img src="img/fa-rick.jpg" alt="Image 1">
-          <img src="img/314989081_137004312454564_1686678289414028147_n.jpg" alt="Image 2">
-          <img src="img/fa-mess.jpg" alt="Image 3">
-          <img src="img/fa-meters.jpg" alt="Image 4">
-          <img src="img/fa-roman2.jpg" alt="Image 5">
-          <img src="img/fa-shack.jpg" alt="Image 6">
-          <img src="img/fa-prop.png" alt="Image 7">
-          <img src="img/fa-youngboy.jpg" alt="Image 8">
+        <div class="flexcent" style="color: white; font-weight: 700; text-align: center;">
+            <large>An Interactive Series of Galleries</large>
+            <p style="font-weight: 200;">scroll to be amazed</p>
         </div>
-      </div>
+    </div>
+    <div>
+        Put more exciting content here!!!!!!
+    </div>
+    <div class="hscrolcont" style="padding: 10px; width: 100vw;">
+        <div class="hscrolitem">
+            <img src="img/fa-rick.jpg" alt="Image 1">
+            <img src="img/314989081_137004312454564_1686678289414028147_n.jpg" alt="Image 2">
+            <img src="img/fa-mess.jpg" alt="Image 3">
+            <img src="img/fa-meters.jpg" alt="Image 4">
+            <img src="img/fa-roman2.jpg" alt="Image 5">
+            <img src="img/fa-shack.jpg" alt="Image 6">
+            <img src="img/fa-prop.png" alt="Image 7">
+            <img src="img/fa-youngboy.jpg" alt="Image 8">
+        </div>
+    </div>
 <footer>
     <div class="container">
         <div class="column">
