--- a/options-d.html
+++ b/options-d.html
@@ -14,7 +14,7 @@
     </div>
     <div class="indented" style="margin-top: 5px;">
         <button onclick="window.location.href='options-d.html'" class="nolinebutton">Design</button>
-        <button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>
+        <!--<button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>-->
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
@@ -26,8 +26,9 @@
     <div class="indented">
         <div style="height: 50vh;">
         <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-branding.html'">Branding..</p>
-        <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-print.html'">Print Design..</p>
-        <p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-fonts.html'">Typefaces..</p>
+        <!--<p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-print.html'">Print Design..</p>-->
+        <!--<p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-fonts.html'">Typefaces..</p>-->
+        <!--<p style="background-color: rgb(204, 229, 221); padding-left:20px; width: 200px;" onclick="window.location.href='gallery-illustration.html'">Illustrative Work..</p>-->
         </div>
     </div>
 <footer>
