--- a/gallery-illustration.html
+++ b/gallery-illustration.html
@@ -14,7 +14,7 @@
     </div>
     <div class="indented" style="margin-top: 5px;">
         <button onclick="window.location.href='options-d.html'" class="nolinebutton">Design</button>
-        <button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>
+        <!--<button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>-->
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
@@ -27,7 +27,7 @@
         <p>Please enjoy this gallery!</p>
     </div>
     <div class="indented">
-        <div class="flexcont">
+        <div class="flexcont"><!-- COLUMN 1 -->
             <div class="flexcoll">
                 <div class="flexbod">
                     <img src="img/fa-mess.jpg">
@@ -38,8 +38,23 @@
                 <div class="flexbod">
                     <img src="img/fa-macbeth.jpg">
                 </div>
+                <div class="flexbod">
+                    <img src="img/fa-3friends.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-colorado3.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-colorado4.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-goblin1.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-goblin2.jpg">
+                </div>
             </div>
-            <div class="flexcol">
+            <div class="flexcol"><!-- COLUMN 2 -->
                 <div class="flexbod">
                     <img src="img/fa-tallstones.jpg">
                 </div>
@@ -49,8 +64,17 @@
                 <div class="flexbod">
                     <img src="img/fa-meters.jpg">
                 </div>
+                <div class="flexbod">
+                    <img src="img/fa-roman1.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-jandg.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-roman2.jpg">
+                </div>
             </div>
-            <div class="flexcolr">
+            <div class="flexcolr"><!-- COLUMN 3 -->
                 <div class="flexbod">
                     <img src="img/fa-shack.jpg">
                 </div>
@@ -58,7 +82,13 @@
                     <img src="img/fa-enviro1.jpg">
                 </div>
                 <div class="flexbod">
-                    <img src="X">
+                    <img src="img/fa-slov.jpg">
+                </div>
+                <div class="flexbod">
+                    <img src="img/fa-meters.jpg">
+                </div>
+                 <div class="flexbod">
+                    <img src="img/fa-gorilla1.jpg">
                 </div>
             </div>
         </div>
