--- a/spg-br-uenozoo.html
+++ b/spg-br-uenozoo.html
@@ -14,7 +14,7 @@
     </div>
     <div class="indented" style="margin-top: 5px;">
         <button onclick="window.location.href='options-d.html'" class="nolinebutton">Design</button>
-        <button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>
+        <!--<button onclick="window.location.href='options-a.html'" class="nolinebutton">Art</button>-->
         <button onclick="window.location.href='about.html'" class="nolinebutton">About</button>
         <button onclick="window.location.href='contact.html'" class="nolinebutton">contact>></button>
     </div>
